--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,6 +62,7 @@ const { country, themeColor } = await fetchPage(1, [
 	</head>
 	<body>
 		<PageNavigation />
+		<PageHero />
 		<!-- <PageNavigation
 			links={record.links}
 			logo={record.expand.logo}
