--- a/src/components/Hero/AlternateHorizontal/AlternateHorizontal.astro
+++ b/src/components/Hero/AlternateHorizontal/AlternateHorizontal.astro
@@ -1,23 +1,23 @@
 ---
+import type { HeroBlock } from "@utils/payload/types";
 import Container from "@components/Container.astro";
 import "./hero.css";
-import type { HeroProps } from "@utils/types";
 import CustomImage from "@components/CustomImage.astro";
-interface Props extends HeroProps {}
-const { title, excerpt, image } = Astro.props;
+interface Props extends HeroBlock {}
+const { heading, excerpt, cover } = Astro.props;
 ---
 
 <header class='horizontal_hero content_section'>
     <Container>
         <div class="horizontal_hero__wrapper">
             <article class="horizontal_hero__content">
-                <h1>{title}</h1>
+                <h1>{heading}</h1>
                 <p>{excerpt}</p>
             </article>
 
             <div class="horizontal_hero__image_wrapper">
                 <CustomImage
-                    image={image}
+                    image={cover}
                     size="large"
                     classlist="horizontal_hero__image"
                     eager={true}
