--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,10 @@ const { country, themeColor } = await fetchPage(1, [
 	</head>
 	<body>
 		<PageNavigation />
-		<PageHero />
+		<main>
+			<PageHero />
+			<Sections />
+		</main>
 		<!-- <PageNavigation
 			links={record.links}
 			logo={record.expand.logo}
