--- a/src/components/Cards/Basic/Basic.astro
+++ b/src/components/Cards/Basic/Basic.astro
@@ -1,26 +1,30 @@
 ---
-interface Card {
-    [key: string]: {
-        [key: string]: any;
-    };
-}
+import type {BasicCard} from '@utils/payload/types'
+// interface Props extends BasicCard {}
+// interface Card {
+//     [key: string]: {
+//         [key: string]: any;
+//     };
+// }
 import "./basic.css";
 import CustomImage from "@components/CustomImage.astro";
-const { cards } = Astro.props;
+import { extractLexicalText } from '@utils/payload/helpers';
+const {cards} = Astro.props;
+console.log(cards)
 ---
 
 <div class="basic_card">
     {
-        cards.map((card: Card) => (
+        cards.map((card: BasicCard) => (
             <article data-animate-on-scroll>
-                {card.expand.image && (
+                {card.image && (
                     <div class="basic_card__image-wrapper">
-                        <CustomImage eager={false} image={card.expand.image} size="medium" classlist="basic_card__image_component" />
+                        <CustomImage eager={false} image={card.image} size="medium" classlist="basic_card__image_component" />
                     </div>
                 )}
                 <div class="basic_card__content">
                     <h3>{card.title}</h3>
-                    <slot set:html={card.content} />
+                    <slot set:html={extractLexicalText(card.body)} />
                 </div>
             </article>
         ))
