--- a/src/components/CustomImage.astro
+++ b/src/components/CustomImage.astro
@@ -1,4 +1,11 @@
 ---
+import type { Media } from "@utils/payload/types";
+interface Props {
+  image: Media;
+  classlist: string;
+  size: 'logo' | 'small' | 'medium' | 'large';
+  eager: boolean;
+}
 import { Image } from "astro:assets";
 const { image, classlist, size, eager } = Astro.props;
 
@@ -9,8 +16,8 @@ const widths = size === 'logo'
   : size === 'medium' 
     ? [500, 750] 
   : size === 'large' 
-    ? [1000, Math.max(1000, image.width)] // Ensure width is at least 1000
-  : [image.width];
+    ? [1000, Math.max(1000, image.width ?? 1000)] // Ensure width is at least 1000
+  : [image.width ?? 1000];
 
 const sizes = size === 'logo' 
   ? `200px` 
@@ -24,7 +31,7 @@ const sizes = size === 'logo'
 ---
 <Image
     src={`${import.meta.env.DATABASE_URL}${image.url}`}
-    alt={image.alt}
+    alt={image.alt as string}
     title={image.alt}
     width={image.width}
     height={image.height}
@@ -34,5 +41,5 @@ const sizes = size === 'logo'
     class={classlist}
     loading={eager ? "eager" : "lazy"}
     decoding={eager ? "sync" : "async"}
-    style={`object-position: ${image.focalX ? image.focalX + "% " + image.focalY + "%" : "center"}; object-fit: ${image.fit ? image.fit : "cover"}`}
+    style={`object-position: ${image.focalX ? image.focalX + "% " + image.focalY + "%" : "center"};`}
 />
