--- a/src/components/Sections/Testimonial/SimpleTestimonial/testimonial.css
+++ b/src/components/Sections/Testimonial/SimpleTestimonial/testimonial.css
@@ -1,29 +1,24 @@
-.testimonial-title {
-  text-align: left;
-  font-size: var(--heading-large);
-  font-weight: var(--heading-large-weight);
-  margin-bottom: var(--size-8);
-  /* color: var(--clr-neutral-900); */
-  max-width: 20ch;
-}
-
 .testimonial-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: var(--size-7);
   max-width: 100%;
   margin: 0 auto;
+  margin-top: var(--size-4);
 }
 
 .testimonial-card {
   background: var(--clr-neutral-50);
-  border-radius: var(--size-3);
-  padding: var(--size-7);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+  padding: var(--size-4);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   border: 1px solid var(--clr-neutral-300);
+}
+
+.testimonial-card:nth-child(even) {
+  background-color: oklch(from var(--clr-primary-light) calc(l + 0.99) calc(c - 0.14) h);
+  border: 1px solid oklch(from var(--clr-primary-light) calc(l - 0.08) calc(c - 0.14) h);
 }
 
 .testimonial-content {
@@ -35,8 +30,6 @@
   font-size: var(--body-large);
   font-weight: var(--body-large-weight);
   line-height: 1.7;
-  color: var(--clr-neutral-700);
-  font-style: italic;
   margin: 0;
 }
 
@@ -52,17 +45,15 @@
   gap: var(--size-1);
 }
 
-.author-info h4 {
+.author-info h3 {
   margin: 0;
   font-size: var(--body-large);
-  color: var(--clr-primary);
-  font-weight: var(--heading-small-weight);
+  font-weight: var(--body-large-weight);
 }
 
 .author-info p {
   margin: 0;
   font-size: var(--body-medium);
-  color: var(--clr-neutral-600);
 }
 
 /* Tablet */
@@ -70,12 +61,6 @@
   .testimonial-grid {
     grid-template-columns: repeat(2, 1fr);
     gap: var(--size-5);
-  }
-
-  .testimonial-title {
-    font-size: var(--heading-medium);
-    margin-bottom: var(--size-7);
-    max-width: 25ch;
   }
 }
 
@@ -90,18 +75,8 @@
     gap: var(--size-5);
   }
 
-  .testimonial-title {
-    font-size: var(--heading-small);
-    margin-bottom: var(--size-7);
-    max-width: 100%;
-  }
-
   .testimonial-card {
     padding: var(--size-5);
-  }
-
-  .testimonial-content p {
-    font-size: var(--body-medium);
   }
 }
 
@@ -113,22 +88,5 @@
 
   .testimonial-container {
     padding: 0 var(--size-2);
-  }
-
-  .testimonial-title {
-    font-size: var(--heading-xsmall);
-    margin-bottom: var(--size-6);
-  }
-
-  .testimonial-content p {
-    font-size: var(--body-medium);
-  }
-
-  .author-info h4 {
-    font-size: var(--body-medium);
-  }
-
-  .author-info p {
-    font-size: var(--body-small);
   }
 }
