--- a/src/components/Sections/Contact Sections/TwoColumnContact/contact.css
+++ b/src/components/Sections/Contact Sections/TwoColumnContact/contact.css
@@ -3,7 +3,10 @@
     display: grid;
     grid-template-rows: auto 350px;
     gap: var(--size-4);
-    padding: var(--container-padding-block) 0;
+    /* padding: var(--container-padding-block) 0; */
+}
+.two_column_contact header {
+    margin-bottom: var(--size-8);
 }
 .two_column_contact__location .location {
     width: 100%;
@@ -21,26 +24,16 @@
 }
 @media (min-width: 768px) {
     .two_column_contact__content {
-        /* --col-count: 12;
-        --gutter: 4px;
-        --column-width: calc((var(--content-max-width) - (var(--gutter) * (var(--col-count) - 1))) / var(--col-count));
-        display: grid;
-        grid-template-columns: repeat(var(--col-count), var(--column-width));
-        grid-template-rows: calc(var(--content-max-width) / 2.5);
-        gap: var(--gutter);
-        width: var(--content-max-width);
-        height: calc(var(--content-max-width) / 2.5);
-        padding: 0;
-        margin: var(--container-padding-block) auto; */
         display: grid;
         grid-template-columns: 1fr 2fr;
-        grid-template-rows: 1fr;
+        grid-template-rows: 400px;
+        align-items: start;
     }
     
 
     .two_column_contact__body {
         grid-column: 1 / 2;
-
+        
         display: flex;
         flex-flow: column nowrap;
         justify-content: center;
@@ -51,8 +44,7 @@
         grid-column: 2 / -1;
         grid-row: 1 / -1;
 
-        display: grid;
-        grid-template-rows: auto 350px;
-        gap: var(--size-2);
+        width: 100%;
+        height: 100%;
     }
 }
