--- a/src/components/Sections/Sections.astro
+++ b/src/components/Sections/Sections.astro
@@ -6,6 +6,7 @@ import WhyChooseUsColumn from "@components/Sections/Stats/WhyChooseUsColumn/WhyC
 import SimpleCallToAction from "@components/Sections/CtaSection/SimpleCallToAction/SimpleCallToAction.astro"
 import PageHero from "@components/Hero/PageHero.astro"
 import SimpleTestimonial from "@components/Sections/Testimonial/SimpleTestimonial/SimpleTestimonial.astro"
+import ContactSection from "./Contact Sections/ContactSection.astro"
 
 const page = await fetchPage(1, ['blocks'])
 const blocks = page.blocks
@@ -27,6 +28,8 @@ console.log(blocks)
                 return <SimpleCallToAction {...block}/>
             case 'simple-testimonial':
                 return <SimpleTestimonial {...block} />
+            case 'simple-contact':
+                return <ContactSection {...block} />
             default:
                 break;
         }
