feat: Refactor footer components to unify props; update FloatingFooter and TinyFooter to use consistent property names; enhance index page to pass company and URL based on country

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -2,12 +2,12 @@
 import FloatingFooter from "./FloatingFooter/FloatingFooter.astro";
 import TinyFooter from "./TinyFooter/TinyFooter.astro";
 
-const {company, title, style, country} = Astro.props
+const {company, title, style, country, url} = Astro.props
 
 const footerProps = {
     title,
-    company_name: company.companyName,
-    parent_site_url: company.url,
+    company,
+    url,
     country
 }
 ---
