--- a/src/components/Footer/FloatingFooter/FloatingFooter.astro
+++ b/src/components/Footer/FloatingFooter/FloatingFooter.astro
@@ -3,15 +3,15 @@ import { translateFooterItem } from '@utils/translations';
 
 interface Props {
     title: string;
-    company_name: string;
-    parent_site_url: string;
+    company: string;
+    url: string;
     country: string;
 }
 
 import Container from "@components/Container.astro";
 import "./footer.css";
 import { Image } from "astro:assets";
-const { title, company_name, parent_site_url, country } = Astro.props;
+const { title, company, url, country } = Astro.props;
 
 const copyright = translateFooterItem('copyright', country);
 const designedByText = translateFooterItem('designed_by', country);
@@ -24,7 +24,7 @@ const designedByText = translateFooterItem('designed_by', country);
                 &copy; {new Date().getFullYear()} {title.split("|")[0].trim()}. {copyright}
             </p>
             <a
-                href={parent_site_url}
+                href={url}
                 target="_blank"
                 rel="noopener noreferrer"
                 class="floating_footer__logo"
@@ -37,7 +37,7 @@ const designedByText = translateFooterItem('designed_by', country);
                     class="floating_footer__logo-image"
                 />
                 <span class="floating_footer__logo-text"
-                    >{designedByText} {company_name}</span
+                    >{designedByText} {company}</span
                 >
             </a>
         </div>
