--- a/src/components/Footer/TinyFooter/TinyFooter.astro
+++ b/src/components/Footer/TinyFooter/TinyFooter.astro
@@ -3,15 +3,15 @@ import { translateFooterItem } from '@utils/translations';
 
 interface Props {
     title: string;
-    company_name: string;
-    parent_site_url: string;
+    company: string;
+    url: string;
     country: string;
 }
 
 import Container from "@components/Container.astro";
 import "./tiny_footer.css";
 import { Image } from "astro:assets";
-const { title, company_name, parent_site_url, country } = Astro.props;
+const { title, company, url, country } = Astro.props;
 const copyright = translateFooterItem('copyright', country);
 const designedByText = translateFooterItem('designed_by', country);
 ---
@@ -34,8 +34,8 @@ const designedByText = translateFooterItem('designed_by', country);
                     loading="lazy"
                     decoding="async"
                 />
-                <a href={parent_site_url} target="_blank" rel="noopener noreferrer">
-                    {designedByText} {company_name}
+                <a href={url} target="_blank" rel="noopener noreferrer">
+                    {designedByText} {company}
                 </a>
             </p>
         </div>
