--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,10 +41,30 @@ const fonts = {
 	},
 };
 
-const { country, themeColor } = await fetchPage(1, [
+const parentUrls: Record<string, string> = {
+    ke: 'https://www.yellowpageskenya.com/',
+    cv: 'https://www.paginasamarelas.cv/',
+    mz: 'https://www.paginasamarelas.co.mz/',
+    tz: 'https://www.yellow.co.tz/',
+    st: 'https://www.paginasamarelas.st/',
+};
+
+const companyNames: Record<string, string> = {
+    ke: 'Yellow Pages Kenya',
+    cv: 'Páginas Amarelas de Cabo Verde',
+    mz: 'Páginas Amarelas Moçambique',
+    tz: 'Yellow Tanzania',
+    st: 'Páginas Amarelas São Tomé',
+};
+
+const { country, themeColor, footerStyle, title} = await fetchPage(1, [
 	"country",
 	"themeColor",
+	"footerStyle",
+	"title"
 ]);
+
+console.log({footerStyle})
 ---
 
 <!doctype html>
@@ -65,6 +85,7 @@ const { country, themeColor } = await fetchPage(1, [
 		<main>
 			<Sections />
 		</main>
+		<Footer title={title} style={footerStyle} country={country} company={companyNames[country]} url={parentUrls[country]} />
 		<!-- <PageNavigation
 			links={record.links}
 			logo={record.expand.logo}
